# VDSProject

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  Manager.cpp  Manager.h  ManagerInterface.h  Reachability.cpp  Reachability.h  main.cpp  table.cpp
src/graph/: BDD.dot  BDD.sh
src/test/: CMakeLists.txt  Tests.h  manager_tests.cpp
